Replace WeatherForecast functionality with initial migration for CodeChallengeDb
Replaced all existing functionality in the WeatherForecast API endpoint with a development for a new system. This includes creating a context for the database 'CodeChallengeDb', establishing connection string, and setting up initial migration files within the Migrations Directory. The new system involves models such as Customer, Order, Product, and Rating for the application to function effectively.

--- a/CodeChallenge/appsettings.json
+++ b/CodeChallenge/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CodeChallengeDbContext": "Data Source=CodeChallengeDb.db"
+  }
 }
